---
source: crates/flir-cli/tests/integration/toml.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\".\").run().normalize_os_executable_name().normalize_temp_paths()"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Failed to parse [TEMP_DIR]/flir.toml:
TOML parse error at line 2, column 8
  |
2 | [linter
  |        ^
unclosed table, expected `]`


----- args -----
.
